# Omega-k-algorithm

./: CMakeLists.txt  CubicSlpine.h  compression_algorithm.cpp  compression_algorithm.h  extra_tools.cpp  extra_tools.h  main.cpp  tester.cpp  tester.h
sar_processing/: CMakeLists.txt  compression_algorithm.cpp  extra_tools.cpp  extra_tools.h  main.cpp  tester.cpp  tester.h
